# bayesianEnsemble

./: .gitignore  experiments.csv  readme.md
SOAP/: Federated-Ensembles-soapui-project.xml
algorithm/: experiments_2.csv  experiments_horizontal.csv  formated experiments.xlsx  hybrid experiments.csv  pom.xml  test.arff  test.xml
algorithm/resources/Experiments/: discretized_1000.arff
algorithm/resources/Experiments/Alarm/: ALARM10kWEKA.arff  ALARM10kWeka_missing_0_05.arff  ALARM10kWeka_missing_0_1.arff  ALARM10kWeka_missing_0_3.arff
algorithm/resources/Experiments/Asia/: Asia10kWEKA.arff  Asia10kWeka_missing_0_05.arff  Asia10kWeka_missing_0_1.arff  Asia10kWeka_missing_0_3.arff
algorithm/resources/Experiments/Autism/: autism.arff  autism_missing_0_05.arff  autism_missing_0_1.arff  autism_missing_0_3.arff  left.arff  right.arff  source.txt
algorithm/resources/Experiments/Diabetes/: diabetesWeka.arff  diabetesWeka_missing_0_05.arff  diabetesWeka_missing_0_1.arff  diabetesWeka_missing_0_3.arff
algorithm/resources/Experiments/Mushrooms/: agaricus-lepiota.arff  agaricus-lepiota_missing_0_05.arff  agaricus-lepiota_missing_0_1.arff  agaricus-lepiota_missing_0_3.arff  source.txt
algorithm/resources/Experiments/iris/: iris.arff  iris_missing_0_05.arff  iris_missing_0_1.arff  left.arff  (+2 more)
dockerwrapper/: Dockerfile  pyproject.toml
dockerwrapper/src/com/florian/: __init__.py
dockerwrapper/src/com/florian/bayesianensemble/: urlcollector.py
dockerwrapper/src/com/florian/bayesianensemble/wrapper/: client.py  main.py  secondary.py
dockerwrapper/test/: TestScript.py
(+45 files in other folders)
